[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/level/Level.gd" type="Script" id=1]
[ext_resource path="res://assets/level/sprites/desert-backgorund.png" type="Texture" id=2]
[ext_resource path="res://assets/level/sprites/clouds.png" type="Texture" id=3]
[ext_resource path="res://assets/level/music/Common Fight.ogg" type="AudioStream" id=4]

[node name="Level" type="Node2D"]
script = ExtResource( 1 )

[node name="bgMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="Background" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Background"]
motion_mirroring = Vector2( 0, 272 )

[node name="Sprite" type="Sprite" parent="Background/ParallaxLayer"]
texture = ExtResource( 2 )
centered = false

[node name="Cloud01" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="Cloud01"]
motion_mirroring = Vector2( 0, 272 )

[node name="Sprite" type="Sprite" parent="Cloud01/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.313726 )
texture = ExtResource( 3 )
centered = false

[node name="Cloud02" type="ParallaxBackground" parent="."]
offset = Vector2( 0, 128 )
transform = Transform2D( 1, 0, 0, 1, 0, 128 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="Cloud02"]
motion_mirroring = Vector2( 0, 272 )

[node name="Sprite" type="Sprite" parent="Cloud02/ParallaxLayer"]
modulate = Color( 1, 1, 1, 0.470588 )
scale = Vector2( 0.997367, 1 )
texture = ExtResource( 3 )
centered = false
